--- a/work/Pages/PVP.xaml
+++ b/work/Pages/PVP.xaml
@@ -58,7 +58,9 @@
         <ImageBrush x:Key="chessBoardBackground" ImageSource="{StaticResource chessBoardImage}"/>
         <DropShadowEffect x:Key="DropShadowEffect" ShadowDepth="5" BlurRadius="10" Color="Gray" />
     </Page.Resources>
-    <Grid>
+
+    <Grid Background="#F0F0F0">
+       
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -81,17 +83,25 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        <Label Grid.Row="1" Background="Aqua" x:Name="left"></Label>
+        <Label Grid.Row="1" Background="Aqua" Grid.Column="8" x:Name="right"></Label>
+        <!--倒计时-->
+        <TextBlock Name="CountdownTextBlock1" Grid.Column="1" Grid.Row="3" Grid.RowSpan="2" Text="{Binding OurSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBlock Name="CountdownTextBlock2" Grid.Column="7" Grid.Row="3" Grid.RowSpan="2" Text="{Binding OppSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="7" Content="Player vs Player" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="30" FontWeight="Bold" Foreground="#4A8CCB"/>
+        <Button Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" Content="{Binding BackText, Mode=TwoWay, TargetNullValue=返回主页}" Style="{StaticResource ctrlButton}" Click="jumpBackToMain"/>
+        <Button Grid.Column="5" Grid.Row="7" Grid.ColumnSpan="2" Content="{Binding MatchText, Mode=TwoWay, TargetNullValue=开始匹配}" Style="{StaticResource ctrlButton}" Click="startToMatch"/>
 
-        <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="7" Content="Player vs Player"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="30"/>
-        <Button Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" Content="返回主页" Style="{StaticResource ctrlButton}" Click="jumpBackToMain"/>
-        <Button Grid.Column="5" Grid.Row="7" Grid.ColumnSpan="2" Content="开始匹配" Style="{StaticResource ctrlButton}" Click="startToMatch"/>
-        <Grid x:Name="myCanvasFatherGrid" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="7" Grid.RowSpan="6" >
-            <Border CornerRadius="30" BorderBrush="Transparent" BorderThickness="1" Background="#FF4A8CCB">
-                <Canvas  x:Name="myCanvas"  
-                Background="{StaticResource chessBoardBackground}"
-                 MouseLeftButtonDown="myCanvas_MouseLeftButtonDown" 
-                 SizeChanged="myCanvas_SizeChanged"
-                 Width="{Binding CanvasWidth}" Margin="112,0,112,0">
+        <Grid x:Name="myCanvasFatherGrid" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="7" Grid.RowSpan="6">
+           
+            <Border CornerRadius="30" BorderBrush="Transparent" BorderThickness="1" Background="#FF4A8CCB" Effect="{StaticResource DropShadowEffect}">
+               
+                <Canvas x:Name="myCanvas"
+                        Background="{StaticResource chessBoardBackground}"
+                        MouseLeftButtonDown="myCanvas_MouseLeftButtonDown"
+                        SizeChanged="myCanvas_SizeChanged"
+                        Width="{Binding CanvasWidth}"
+                        Margin="112,0,112,0">
 
                     <Grid Width="{Binding ActualWidth, ElementName=myCanvas}" Height="{Binding ActualHeight, ElementName=myCanvas}">
                         <Grid.RowDefinitions>
@@ -112,17 +122,57 @@
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
 
-                        <!-- 使用绑定动态创建按钮 -->
-                        <ItemsControl ItemsSource="{Binding Buttons}">
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Button Style="{StaticResource commonBtnStyle}" Command="{Binding ButtonCommand}" />
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
+                        <Button Grid.Column="0" Grid.Row="0"  x:Name="Button00" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="0" x:Name="Button01" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="0" x:Name="Button02" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="0" x:Name="Button03" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="0" x:Name="Button04" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="0"  x:Name="Button05" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="0" x:Name="Button06" Style="{StaticResource commonBtnStyle}" />
+
+                        <Button Grid.Column="0" Grid.Row="1" x:Name="Button10" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="1" x:Name="Button11" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="1" x:Name="Button12" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="1"  x:Name="Button13" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="1" x:Name="Button14" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="1" x:Name="Button15" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="1" x:Name="Button16" Style="{StaticResource commonBtnStyle}" />
+
+                        <Button Grid.Column="0" Grid.Row="2" x:Name="Button20" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="2"  x:Name="Button21" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="2" x:Name="Button22" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="2" x:Name="Button23" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="2" x:Name="Button24" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="2" x:Name="Button25" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="2"  x:Name="Button26" Style="{StaticResource commonBtnStyle}" />
+
+                        <Button Grid.Column="0" Grid.Row="3" x:Name="Button30" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="3" x:Name="Button31" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="3" x:Name="Button32" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="3" x:Name="Button33" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="3"  x:Name="Button34" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="3" x:Name="Button35" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="3" x:Name="Button36" Style="{StaticResource commonBtnStyle}" />
+
+                        <Button Grid.Column="0" Grid.Row="4" x:Name="Button40" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="4" x:Name="Button41" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="4"  x:Name="Button42" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="4" x:Name="Button43" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="4" x:Name="Button44" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="4" x:Name="Button45" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="4" x:Name="Button46" Style="{StaticResource commonBtnStyle}" />
+
+                        <Button Grid.Column="0" Grid.Row="5"  x:Name="Button50" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="5" x:Name="Button51" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="5" x:Name="Button52" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="5" x:Name="Button53" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="5" x:Name="Button54" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="5"  x:Name="Button55" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="5" x:Name="Button56" Style="{StaticResource commonBtnStyle}" />
+
 
                     </Grid>
-                    
+
                 </Canvas>
             </Border>
         </Grid>
