--- a/work/MainWindow.xaml
+++ b/work/MainWindow.xaml
@@ -9,9 +9,64 @@
     
 
     <ContentControl x:Name="mainContent">
-    <Grid>
+    <Grid Background="Ivory">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+        
             <Button Content="jump to Main" Background="AliceBlue" Click="jumpToMain"> </Button>
-       
+            <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="4" Background="Beige">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <TextBlock Text="账号:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10"/>
+                <TextBox x:Name="nameInput" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Margin="10" VerticalContentAlignment="Center"></TextBox>
+
+                <!-- Password Input -->
+                <TextBlock Name="passwordlabel" Text="密码:"  Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10"/>
+                <PasswordBox x:Name="passwordInput" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="4" Margin="10" VerticalContentAlignment="Center"></PasswordBox>
+
+                <!-- Ensure Password Input -->
+                <TextBlock Name ="ensurePasswordLabel" Text="确认密码:"  Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10" Visibility="Collapsed"/>
+                <PasswordBox x:Name="ensurepasswordInput" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="4" Margin="10" VerticalContentAlignment="Center" Visibility="Collapsed"></PasswordBox>
+
+                <!-- Nickname Input -->
+                <TextBlock Name="nicknameLabel" Text="用户名:"  Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10" Visibility="Collapsed"/>
+                <TextBox x:Name="nicknameInput" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="4" Margin="10" VerticalContentAlignment="Center" Visibility="Collapsed"></TextBox>
+
+                <!-- Buttons -->
+                <Button x:Name="login" Content="登录" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="2" Margin="10" Background="#C7EDCC" Click="Login"></Button>
+                <Button x:Name="register" Content="注册" Grid.Column="3" Grid.Row="5" Grid.ColumnSpan="2" Margin="10" Background="#FDE6E0" Click="change2register"></Button>
+                <Button x:Name="back" Content="返回" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="2" Margin="10" Background="#C7EDCC" Click="change2login" Visibility="Collapsed"></Button>
+                <Button x:Name="confirm" Content="确认" Grid.Column="3" Grid.Row="5" Grid.ColumnSpan="2" Margin="10" Background="#FDE6E0" Click="Register" Visibility="Collapsed"></Button>
+            </Grid>
  </Grid>
     </ContentControl>
 </Window>
